added meta tag for description

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,7 @@
     </script>
     <!--end google analytics-->
 
+    <meta name="description" content="tftbuild is an interactive cheatsheet for Team Fight Tactics with class and item highlighting updated for the latest patch 9.14." />
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
