--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
     </script>
     <!--end google analytics-->
 
-    <meta name="description" content="tftbuild is an interactive cheatsheet for Team Fight Tactics with class and item highlighting updated for the latest patch 9.14." />
+    <meta name="description" content="tftbuild is an interactive cheatsheet for Team Fight Tactics (TFT) with class and item highlighting updated for the latest patch 9.14." />
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>tftbuild</title>
+    <title>tftbuild - TFT CheatSheet</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
